@@ -1,3 +1,8 @@
+2003-9-29  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/tap/procmon.py twisted/plugins.tml: remove procmon
+	tap. It was crufty and hard to port properly to new application.
+
 2003-09-29  Brian Warner  <warner@lothar.com>
 
 	* twisted/scripts/trial.py (Options.opt_reactor): make trial
